--- a/Home.html
+++ b/Home.html
@@ -12,17 +12,30 @@
     <title>Home</title>
 </head>
 
+<style>
+    
+</style>
+
 <body>
     <div class="mask"></div>
+
+
     <div class="home-banner">
         <div class="bg-tint vh-90">
             <nav class="navbar navbar-expand-lg py-3">
-                <div class="container">
-                    <a class="navbar-brand" href="Home.html"><img src="images/Logo.png" alt=""></a>
+                <div class="container justify-content-start">
+                    <a class="navbar-brand me-auto" href="Home.html"><img src="images/Logo.png" alt=""></a>
                     <div class="d-flex gap-1 align-items-center">
                         <div class="d-lg-none d-flex gap-3">
-                            <i class="ri-search-line text-white fs-1"></i>
-                            <i class="ri-shopping-cart-2-line text-white fs-1"></i>
+                            <!-- <i class="ri-search-line text-white fs-1"></i> -->
+                            <!-- <div class="search-container">
+                                <form action="/search" method="get">
+                                    <input class="search expandright" id="searchright" type="search" name="q"
+                                        placeholder="Search">
+                                    <label class="button searchbutton" for="searchright"><span
+                                            class="mglass">&#9906;</span></label>
+                                </form>
+                            </div> -->
                         </div>
                         <button class="navbar-toggler text-white border-0 fs-1" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -37,14 +50,32 @@
                                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                     aria-expanded="false" aria-label="Toggle navigation"></i>
                             </li>
+                            <div class="dropdown">
+                                <li class="nav-item " type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <a class="nav-link px-0 text-white aria-current=" href="Peroglas.html">Pergolas <i
+                                            class="ri-arrow-down-s-fill"></i></a>
+                                </li>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item py-2 fs-sm"
+                                            href="Modern-Wall-Mounted-Pergolas.html">Modern Wall Mounted Pergolas</a>
+                                    </li>
+                                    <li><a class="dropdown-item py-2 fs-sm" href="Most-Modern-Free-Standing.html">Most
+                                            Modern Free Standing</a></li>
+                                    <li><a class="dropdown-item py-2 fs-sm"
+                                            href="Mounted-Pergolas-on-Brackets.html">Mounted Pergolas on Brackets</a>
+                                    </li>
+                                    <li><a class="dropdown-item py-2 fs-sm"
+                                            href="Plain-Modern-Free-Standing-Pergolas.html">Plain Modern Free Standing
+                                            Pergolas</a></li>
+                                </ul>
+                            </div>
                             <li class="nav-item">
-                                <a class="nav-link px-0 text-white aria-current=" href="Peroglas.html">Pergolas</a>
+                                <a class="nav-link px-0 text-white aria-current=" href="Outdoor-Kitchens.html">Outdoor
+                                    Kitchens</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link px-0 text-white aria-current=" href="#">Outdoor Kitchens</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link px-0 text-white aria-current=" href="#">Inspiration Gallery</a>
+                                <a class="nav-link px-0 text-white aria-current="
+                                    href="Inspiration-Gallery.html">Inspiration Gallery</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link px-0 text-white aria-current=" href="Our-Story.html">Our Story</a>
@@ -56,12 +87,20 @@
                         <div class="d-flex align-items-center gap-xl-3 gap-lg-2">
                             <button class="btn btn-light fw-semibold btn-sm fs-sm" type="submit">Schedule a
                                 Conversation</button>
-                            <div class="d-lg-block d-none">
-                                <i class="ri-search-line text-white fs-4"></i>
-                                <i class="ri-shopping-cart-2-line text-white fs-4"></i>
                             </div>
                         </div>
-                    </div>
+                        <div class="">
+                            <!-- <i class="ri-search-line text-white fs-4"></i> -->
+
+                            <div class="search-container">
+                                <form action="/search" method="get">
+                                    <input class="search expandright" id="searchright" type="search" name="q"
+                                        placeholder="Search">
+                                    <label class="button searchbutton" for="searchright"><span
+                                            class="mglass">&#9906;</span></label>
+                                </form>
+                            </div>
+                        </div>
                 </div>
             </nav>
             <div
@@ -126,45 +165,53 @@
                 <div class="col-xl-4 col-md-4">
                     <div style="height: 650px;" class="background-1 position-relative">
                         <div class="bg-tint h-100">
-                            <div
-                                class="text-white d-flex my-3 justify-content-between align-items-center position-absolute w-100 bottom-0">
-                                <div class="fw-semibold ps-3">free standing</div>
-                                <i class="ri-arrow-right-circle-fill pe-3 fs-2"></i>
-                            </div>
+                            <a href="Most-Modern-Free-Standing.html">
+                                <div
+                                    class="text-white d-flex my-3 justify-content-between align-items-center position-absolute w-100 bottom-0">
+                                    <div class="fw-semibold ps-3">free standing</div>
+                                    <i class="ri-arrow-right-circle-fill pe-3 fs-2"></i>
+                                </div>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-8 col-md-8">
                     <div style="height: 300px;" class="background-2 position-relative">
                         <div class="bg-tint h-100">
-                            <div
-                                class="text-white d-flex my-3 justify-content-between align-items-center position-absolute w-100 bottom-0">
-                                <div class="fw-semibold ps-3">Plain modern free standing </div>
-                                <i class="ri-arrow-right-circle-fill pe-3 fs-2"></i>
-                            </div>
+                            <a href="Plain-Modern-Free-Standing-Pergolas.html">
+                                <div
+                                    class="text-white d-flex my-3 justify-content-between align-items-center position-absolute w-100 bottom-0">
+                                    <div class="fw-semibold ps-3">Plain modern free standing </div>
+                                    <i class="ri-arrow-right-circle-fill pe-3 fs-2"></i>
+                                </div>
+                            </a>
                         </div>
                     </div>
                     <div class="row mt-4 gap-md-0 gap-4">
                         <div class="col-xl-6 col-md-6">
                             <div style="height: 320px;" class="background-3 position-relative">
                                 <div class="bg-tint h-100">
-                                    <div
-                                        class="text-white d-flex my-3 justify-content-between align-items-center position-absolute w-100 bottom-0">
-                                        <div class="fw-semibold ps-3">Mounted on brackets</div>
-                                        <i class="ri-arrow-right-circle-fill pe-3 fs-2"></i>
-                                    </div>
+                                    <a href="Mounted-Pergolas-on-Brackets.html">
+                                        <div
+                                            class="text-white d-flex my-3 justify-content-between align-items-center position-absolute w-100 bottom-0">
+                                            <div class="fw-semibold ps-3">Mounted on brackets</div>
+                                            <i class="ri-arrow-right-circle-fill pe-3 fs-2"></i>
+                                        </div>
+                                    </a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xl-6 col-md-6">
                             <div style="height: 320px;" class="background-4 position-relative">
                                 <div class="bg-tint h-100">
-                                    <div
-                                        class="text-white d-flex my-3 justify-content-between align-items-center position-absolute w-100 bottom-0">
-                                        <div class="fw-semibold ps-3">Attached modern
-                                            pergolas </div>
-                                        <i class="ri-arrow-right-circle-fill pe-3 fs-2"></i>
-                                    </div>
+                                    <a href="Mounted-Pergolas-on-Brackets.html">
+                                        <div
+                                            class="text-white d-flex my-3 justify-content-between align-items-center position-absolute w-100 bottom-0">
+                                            <div class="fw-semibold ps-3">Attached modern
+                                                pergolas </div>
+                                            <i class="ri-arrow-right-circle-fill pe-3 fs-2"></i>
+                                        </div>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -303,7 +350,7 @@
 
             <div class="bg-main row align-items-center justify-content-between">
                 <div class="col-lg-auto py-4 fw-semibold text-muted">
-                    © Copyright Pergolas 2024. Design by Webbulls.Us
+                    © Copyright Pergolas 2024. Design by <a href="https:/webbulls.us"> Webbulls.Us</a>
                 </div>
                 <div class="col-lg-auto">
                     <img src="images/carts.png" width="100%" alt="">
@@ -311,7 +358,12 @@
             </div>
         </div>
     </footer>
-    <script src="accets/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
     <script src="accets/script.js"></script>
 </body>
 
