--- a/Plain-Modern-Free-Standing-Pergolas.html
+++ b/Plain-Modern-Free-Standing-Pergolas.html
@@ -22,7 +22,7 @@
 
 <body>
     <div class="mask"></div>
-    <div class="home-banner">
+    <div class="background-1">
         <div class="bg-tint vh-90">
             <nav class="navbar navbar-expand-lg py-3">
                 <div class="container">
@@ -83,7 +83,7 @@
             </nav>
 
             <div class="text-center text-white py-xl gap-4">
-                <div class="fw-bold fs-1 mx-3">Pergolas</div>
+                <div class="fw-bold fs-1 mx-3">Plain Modern Free Standing Pergolas</div>
                 <div class="my-3 fs-5">Proudly Made in America 🇺🇸</div>
                 <button class="btn btn-light">Schedule a Conversation</button>
             </div>
@@ -92,93 +92,55 @@
 
 
     <section class="py-5">
-        <div class="container-fluid">
-            <div class="text-center mb-5">
-                <div class="fw-bold fs-2 text-black">Project Gallery</div>
-                <div>Inspiring Spaces Crafted for Outdoor Living</div>
-            </div>
-            <div class="row center">
-                <div class="col-lg-3">
-                    <div class="mx-2">
-                        <img class="rounded-2" src="images/IMG_8662.JPG" width="100%" alt="">
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="mx-2">
-                        <img class="rounded-2" src="images/IMG_4581.JPG" width="100%" alt="">
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="mx-2">
-                        <img class="rounded-2" src="images/IMG_5775.JPEG" width="100%" alt="">
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="mx-2">
-                        <img class="rounded-2" src="images/IMG_2454.jpeg" width="100%" alt="">
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="mx-2">
-                        <img class="rounded-2" src="images/nav-bg.jpg" width="100%" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-    <section class="py-5">
         <div class="container">
-            <div class="row gap-md-0 gap-4 ">
-                <div class="col-xl-4 col-md-4">
-                    <div style="height: 650px;" class="background-1 position-relative">
-                        <div class="bg-tint h-100">
-                            <div
-                                class="text-white d-flex my-3 justify-content-between align-items-center position-absolute w-100 bottom-0">
-                                <div class="fw-semibold ps-3">free standing</div>
-                                <i class="ri-arrow-right-circle-fill pe-3 fs-2"></i>
-                            </div>
+            <div class="row align-items-center flex-md-row flex-column-reverse">
+                <div class="col-lg-6 col-md-6">
+                    <div>
+                        <div class="fs-3 fw-bold mb-3 lh-sm text-black">Plain Modern Free-Standing Pergolas: The Perfect
+                            Blend of Style and Functionality for Your Outdoor Space
                         </div>
+                        <p class="fs-sm">Plain modern free-standing pergolas bring together a sleek, minimalist design
+                            and practical functionality, making them an ideal addition to any contemporary outdoor
+                            setting. With clean lines, neutral color palettes, and a lack of ornate details, these
+                            pergolas provide a sophisticated touch that seamlessly complements modern homes.
+                        </p>
+                        <p>Typically crafted from durable materials like aluminum, steel, or composite wood, they offer
+                            long-lasting durability with minimal maintenance. These pergolas create an inviting shaded
+                            area, perfect for unwinding, dining al fresco, or entertaining guests, while elevating the
+                            overall beauty and usefulness of your patio, garden, or terrace.
+                        </p>
                     </div>
                 </div>
-                <div class="col-xl-8 col-md-8">
-                    <div style="height: 300px;" class="background-2 position-relative">
-                        <div class="bg-tint h-100">
-                            <div
-                                class="text-white d-flex my-3 justify-content-between align-items-center position-absolute w-100 bottom-0">
-                                <div class="fw-semibold ps-3">Plain modern free standing </div>
-                                <i class="ri-arrow-right-circle-fill pe-3 fs-2"></i>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row mt-4 gap-md-0 gap-4">
-                        <div class="col-xl-6 col-md-6">
-                            <div style="height: 320px;" class="background-3 position-relative">
-                                <div class="bg-tint h-100">
-                                    <div
-                                        class="text-white d-flex my-3 justify-content-between align-items-center position-absolute w-100 bottom-0">
-                                        <div class="fw-semibold ps-3">Mounted on brackets</div>
-                                        <i class="ri-arrow-right-circle-fill pe-3 fs-2"></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-6 col-md-6">
-                            <div style="height: 320px;" class="background-4 position-relative">
-                                <div class="bg-tint h-100">
-                                    <div
-                                        class="text-white d-flex my-3 justify-content-between align-items-center position-absolute w-100 bottom-0">
-                                        <div class="fw-semibold ps-3">Attached modern
-                                            pergolas </div>
-                                        <i class="ri-arrow-right-circle-fill pe-3 fs-2"></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col-lg-6 col-md-6">
+                    <img src="images/IMG_8662.JPG" width="100%" alt="">
                 </div>
             </div>
+
+
+
+            <!-- <div class="row align-items-center mt-4">
+                <div class="col-lg-6 col-md-6">
+                    <img src="images/IMG_4580.JPG" width="100%" alt="">
+                </div>
+                <div class="col-lg-6 col-md-6">
+                    <div>
+                        <div class="fs-3 fw-bold mb-3 lh-sm text-black">Transform Your Backyard
+                            with a Stunning Outdoor Kitchen</div>
+                        <p class="fs-sm">Elevate your outdoor living with a custom-designed outdoor kitchen that
+                            combines style, functionality, and durability. Whether you're hosting family gatherings,
+                            grilling for friends, or enjoying a quiet evening, our outdoor kitchens are built to enhance
+                            your space and create unforgettable experiences. From sleek countertops and built-in grills
+                            to fully equipped setups with refrigerators and storage, we tailor every detail to match
+                            your vision and lifestyle.
+                            <br>
+                            To help you visualize your dream space, we offer 3D designs in four different shapes,
+                            allowing you to see how your outdoor kitchen will look before it's built. Make your backyard
+                            the ultimate entertainment destination with an outdoor kitchen that’s as beautiful as it is
+                            practical.
+                        </p>
+                    </div>
+                </div>
+            </div> -->
         </div>
     </section>
 
@@ -314,6 +276,43 @@
             </div>
         </div>
     </section>
+
+    <section class="py-5">
+        <div class="container-fluid">
+            <div class="text-center mb-5">
+                <div class="fw-bold fs-2 text-black">Project Gallery</div>
+                <div>Inspiring Spaces Crafted for Outdoor Living</div>
+            </div>
+            <div class="row center">
+                <div class="col-lg-3">
+                    <div class="mx-2">
+                        <img class="rounded-2" src="images/IMG_8662.JPG" width="100%" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="mx-2">
+                        <img class="rounded-2" src="images/IMG_4581.JPG" width="100%" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="mx-2">
+                        <img class="rounded-2" src="images/IMG_5775.JPEG" width="100%" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="mx-2">
+                        <img class="rounded-2" src="images/IMG_2454.jpeg" width="100%" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="mx-2">
+                        <img class="rounded-2" src="images/nav-bg.jpg" width="100%" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <section class="py-5 bg-light">
         <div class="container">
