--- a/Blog.html
+++ b/Blog.html
@@ -37,9 +37,25 @@
                                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                     aria-expanded="false" aria-label="Toggle navigation"></i>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link px-0 text-white aria-current=" href="#">Pergolas</a>
-                            </li>
+                            <div class="dropdown">
+                                <li class="nav-item " type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <a class="nav-link px-0 text-white aria-current=" href="Peroglas.html">Pergolas <i
+                                            class="ri-arrow-down-s-fill"></i></a>
+                                </li>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item py-2 fs-sm"
+                                            href="Modern-Wall-Mounted-Pergolas.html">Modern Wall Mounted Pergolas</a>
+                                    </li>
+                                    <li><a class="dropdown-item py-2 fs-sm" href="Most-Modern-Free-Standing.html">Most
+                                            Modern Free Standing</a></li>
+                                    <li><a class="dropdown-item py-2 fs-sm"
+                                            href="Mounted-Pergolas-on-Brackets.html">Mounted Pergolas on Brackets</a>
+                                    </li>
+                                    <li><a class="dropdown-item py-2 fs-sm"
+                                            href="Plain-Modern-Free-Standing-Pergolas.html">Plain Modern Free Standing
+                                            Pergolas</a></li>
+                                </ul>
+                            </div>
                             <li class="nav-item">
                                 <a class="nav-link px-0 text-white aria-current=" href="#">Outdoor Kitchens</a>
                             </li>
@@ -335,10 +351,10 @@
 
 
 
-    <footer class="bg-main">
+   <footer class="bg-main">
         <div class="container py-5 px-lg-2 px-md-2 px-4">
-            <div class="row gap-md-0">
-                <div class="col-lg-4 col-md-4 mb-lg-0 mb-4">
+            <div class="row">
+                <div class="col-lg-4 col-md-10 mb-lg-0 mb-4">
                     <div class="fw-bold fs-2 text-uppercase"><a href="Home.html"><img src="images/black-logo.png"
                                 alt=""></a></div>
 
@@ -357,11 +373,11 @@
                 <div class="col-lg-4 col-md-4 mb-lg-0 mb-4">
                     <div class="fw-bold fs-5 mb-3 text-uppercase">Links</div>
                     <ul class="list-unstyled">
-                        <li class="my-2 fw-medium"><a href="#">Blog</a></li>
-                        <li class="my-2 fw-medium"><a href="#">Terms of Service</a></li>
-                        <li class="my-2 fw-medium"><a href="#">Refund policy</a></li>
+                        <li class="my-2 fw-medium"><a href="Blog.html">Blog</a></li>
+                        <li class="my-2 fw-medium"><a href="Terms-of-service.html">Terms of Service</a></li>
+                        <li class="my-2 fw-medium"><a href="Refund-Policy.html">Refund policy</a></li>
                         <li class="my-2 fw-medium"><a href="#">Installation Manual Luxury Pergola</a></li>
-                        <li class="my-2 fw-medium"><a href="#">Privacy Policy</a></li>
+                        <li class="my-2 fw-medium"><a href="Privacy-Policy.html">Privacy Policy</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-4 mb-lg-0 mb-4">
@@ -378,17 +394,23 @@
 
 
         <div class="container">
-            <div class="row align-items-center justify-content-md-between justify-content-center">
-                <div class="col-lg-auto col-md-6 py-4 fw-semibold text-muted text-center">
+
+            <div class="bg-main row align-items-center justify-content-between">
+                <div class="col-lg-auto py-4 fw-semibold text-muted">
                     © Copyright Pergolas 2024. Design by Webbulls.Us
                 </div>
-                <div class="col-md-auto text-center pb-3">
-                    <img src="images/carts.png" width="250" alt="">
+                <div class="col-lg-auto">
+                    <img src="images/carts.png" width="100%" alt="">
                 </div>
             </div>
         </div>
     </footer>
-    <script src="accets/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
     <script src="accets/script.js"></script>
 </body>
 
