--- a/Contact-us.html
+++ b/Contact-us.html
@@ -18,7 +18,7 @@
         <div class="bg-tint vh-90">
             <nav class="navbar navbar-expand-lg py-3">
                 <div class="container">
-                    <a class="navbar-brand" href="#"><img src="images/Logo.png" alt=""></a>
+                    <a class="navbar-brand" href="Home.html"><img src="images/Logo.png" alt=""></a>
                     <div class="d-flex gap-1 align-items-center">
                         <div class="d-lg-none d-flex gap-3">
                             <i class="ri-search-line text-white fs-1"></i>
@@ -37,9 +37,25 @@
                                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                     aria-expanded="false" aria-label="Toggle navigation"></i>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link px-0 text-white aria-current=" href="#">Pergolas</a>
-                            </li>
+                            <div class="dropdown">
+                                <li class="nav-item " type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <a class="nav-link px-0 text-white aria-current=" href="Peroglas.html">Pergolas <i
+                                            class="ri-arrow-down-s-fill"></i></a>
+                                </li>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item py-2 fs-sm"
+                                            href="Modern-Wall-Mounted-Pergolas.html">Modern Wall Mounted Pergolas</a>
+                                    </li>
+                                    <li><a class="dropdown-item py-2 fs-sm" href="Most-Modern-Free-Standing.html">Most
+                                            Modern Free Standing</a></li>
+                                    <li><a class="dropdown-item py-2 fs-sm"
+                                            href="Mounted-Pergolas-on-Brackets.html">Mounted Pergolas on Brackets</a>
+                                    </li>
+                                    <li><a class="dropdown-item py-2 fs-sm"
+                                            href="Plain-Modern-Free-Standing-Pergolas.html">Plain Modern Free Standing
+                                            Pergolas</a></li>
+                                </ul>
+                            </div>
                             <li class="nav-item">
                                 <a class="nav-link px-0 text-white aria-current=" href="#">Outdoor Kitchens</a>
                             </li>
@@ -47,10 +63,10 @@
                                 <a class="nav-link px-0 text-white aria-current=" href="#">Inspiration Gallery</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link px-0 text-white aria-current=" href="#">Our Story</a>
+                                <a class="nav-link px-0 text-white aria-current=" href="Our-Story.html">Our Story</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link px-0 text-white aria-current=" href="#">Contact Us</a>
+                                <a class="nav-link px-0 text-white aria-current=" href="Contact-us.html">Contact Us</a>
                             </li>
                         </ul>
                         <div class="d-flex align-items-center gap-xl-3 gap-lg-2">
@@ -77,19 +93,19 @@
             <div class="row gap-md-0 gap-4 align-items-center justify-content-evenly">
                 <div class="col-md-auto col-8">
                     <div class="text-center p-4 h-100 bg-white rounded-4 shadow">
-                        <img src="images/Layer_1 (3).png"  width="63" alt="">
+                        <img src="images/Layer_1 (3).png" width="63" alt="">
                         <div class="fw-bolder mt-3">Install Resources</div>
                     </div>
                 </div>
                 <div class="col-md-auto col-8">
                     <div class="text-center p-4 h-100 bg-white rounded-4 shadow">
-                        <img src="images/Layer_1 (1).png" width="50"  alt="">
+                        <img src="images/Layer_1 (1).png" width="50" alt="">
                         <div class="fw-bolder mt-3">Call an expert</div>
                     </div>
                 </div>
                 <div class="col-md-auto col-8">
                     <div class="text-center p-4 h-100 bg-white rounded-4 shadow">
-                        <img src="images/Layer_1 (2).png" width="50"  alt="">
+                        <img src="images/Layer_1 (2).png" width="50" alt="">
                         <div class="fw-bolder mt-3">Contact Form</div>
                     </div>
                 </div>
@@ -156,7 +172,7 @@
                 <div class="col-lg-4 col-md-4 mb-lg-0 mb-4">
                     <div class="fw-bold fs-5 mb-3 text-uppercase">Links</div>
                     <ul class="list-unstyled">
-                        <li class="my-2 fw-medium"><a href="#">Blog</a></li>
+                        <li class="my-2 fw-medium"><a href="Blog.html">Blog</a></li>
                         <li class="my-2 fw-medium"><a href="Terms-of-service.html">Terms of Service</a></li>
                         <li class="my-2 fw-medium"><a href="Refund-Policy.html">Refund policy</a></li>
                         <li class="my-2 fw-medium"><a href="#">Installation Manual Luxury Pergola</a></li>
@@ -188,7 +204,12 @@
             </div>
         </div>
     </footer>
-    <script src="accets/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
     <script src="accets/script.js"></script>
 </body>
 
