--- a/Lifetime-Warranty.html
+++ b/Lifetime-Warranty.html
@@ -16,7 +16,7 @@
     <div class="mask"></div>
     <nav class="navbar navbar-expand-lg bg-black py-3">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="images/Logo.png" alt=""></a>
+            <a class="navbar-brand" href="Home.html"><img src="images/Logo.png" alt=""></a>
             <div class="d-flex gap-1 align-items-center">
                 <div class="d-lg-none d-flex gap-3">
                     <i class="ri-search-line text-white fs-1"></i>
@@ -35,9 +35,23 @@
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation"></i>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link px-0 text-white aria-current=" href="#">Pergolas</a>
-                    </li>
+                    <div class="dropdown">
+                        <li class="nav-item " type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a class="nav-link px-0 text-white aria-current=" href="Peroglas.html">Pergolas <i
+                                    class="ri-arrow-down-s-fill"></i></a>
+                        </li>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item py-2 fs-sm" href="Modern-Wall-Mounted-Pergolas.html">Modern Wall
+                                    Mounted Pergolas</a></li>
+                            <li><a class="dropdown-item py-2 fs-sm" href="Most-Modern-Free-Standing.html">Most Modern
+                                    Free Standing</a></li>
+                            <li><a class="dropdown-item py-2 fs-sm" href="Mounted-Pergolas-on-Brackets.html">Mounted
+                                    Pergolas on Brackets</a></li>
+                            <li><a class="dropdown-item py-2 fs-sm"
+                                    href="Plain-Modern-Free-Standing-Pergolas.html">Plain Modern Free Standing
+                                    Pergolas</a></li>
+                        </ul>
+                    </div>
                     <li class="nav-item">
                         <a class="nav-link px-0 text-white aria-current=" href="#">Outdoor Kitchens</a>
                     </li>
@@ -48,7 +62,7 @@
                         <a class="nav-link px-0 text-white aria-current=" href="Our-Story.html">Our Story</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link px-0 text-white aria-current=" href="#">Contact Us</a>
+                        <a class="nav-link px-0 text-white aria-current=" href="Contact-us.html">Contact Us</a>
                     </li>
                 </ul>
                 <div class="d-flex align-items-center gap-xl-3 gap-lg-2">
